kubernetes/gr-foundry/manifests/sentinel/core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core
  namespace: sentinel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core
  template:
    metadata:
      labels:
        app: core
    spec:
      containers:
        - name: core
          image: ghcr.io/gaucho-racing/sentinel-core:latest
          ports:
            - containerPort: 9999
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: core
  namespace: sentinel
spec:
  selector:
    app: core
  ports:
    - port: 9999
      targetPort: 9999
