kubernetes/gr-foundry/manifests/sentinel/github.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github
  namespace: sentinel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: github
  template:
    metadata:
      labels:
        app: github
    spec:
      containers:
        - name: github
          image: ghcr.io/gaucho-racing/sentinel-github:latest
          ports:
            - containerPort: 9994
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: github
  namespace: sentinel
spec:
  selector:
    app: github
  ports:
    - port: 9994
      targetPort: 9994
