kubernetes/gr-foundry/manifests/sentinel/google.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: google
  namespace: sentinel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: google
  template:
    metadata:
      labels:
        app: google
    spec:
      containers:
        - name: google
          image: ghcr.io/gaucho-racing/sentinel-google:latest
          ports:
            - containerPort: 9995
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: google
  namespace: sentinel
spec:
  selector:
    app: google
  ports:
    - port: 9995
      targetPort: 9995
