kubernetes/gr-foundry/manifests/sentinel/oauth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth
  namespace: sentinel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth
  template:
    metadata:
      labels:
        app: oauth
    spec:
      containers:
        - name: oauth
          image: ghcr.io/gaucho-racing/sentinel-oauth:latest
          ports:
            - containerPort: 9997
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: oauth
  namespace: sentinel
spec:
  selector:
    app: oauth
  ports:
    - port: 9997
      targetPort: 9997
