kubernetes/gr-foundry/manifests/sentinel/saml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saml
  namespace: sentinel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saml
  template:
    metadata:
      labels:
        app: saml
    spec:
      containers:
        - name: saml
          image: ghcr.io/gaucho-racing/sentinel-saml:latest
          ports:
            - containerPort: 9996
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: saml
  namespace: sentinel
spec:
  selector:
    app: saml
  ports:
    - port: 9996
      targetPort: 9996
