kubernetes/gr-foundry/manifests/sentinel/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: sentinel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: ghcr.io/gaucho-racing/sentinel-web:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: sentinel
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
